# KahviKameraBot

./: .gitignore  KahviKameraBotti.py  README.md  Telegrambotti.code-workspace  bot.py  coffeedetection.py  pyproject.toml  run.py  test.py  training.py  tunnistus.py
V_ImagePool/: readme.txt
kahvikamera_bot/: __init__.py  __main__.py  bot.py  coffeedetection.py  coffeedetection_TrainAI.py
kahvikamera_bot/WikiFeetDB/: SQLPerkele.py
